add document in github

--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+    <link rel="stylesheet" href="./assets/css/styles.css">  
 
 <body>
-
+      
 
 
     <img src="assets/img/images/jarditou_logo.jpg" alt="image jardinier" title="jardinier">
 
-    <h1>La qualité depuis 70 ans</h1>
+
 
     <nav>
         <ul>
@@ -68,9 +68,9 @@
 
     <footer>
         <ul>
-            <li><a href="#">Mentions légales</a></li>
-            <li><a href="#">Horaires</a></li>
-            <li><a href="#">Plan du site</a></li>
+            <li><a href="Mentions légales.html">Mentions légales</a></li>
+            <li><a href="Horaires.html">Horaires</a></li>
+            <li><a href="Plan du site.html">Plan du site</a></li>
         </ul>
     </footer>
 
