--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         
         <h2>entreprise</h2>
 
-        <p>
+        <p class="firstp">
             Notre entreprise familiale et tout son savoir-faire à votre disposition dans le domaine du jardin et du
             paysagisme.<br>
             Créer il y a 70 ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisé.<br>
@@ -60,14 +60,16 @@
         </p>
 
         <h2>Qualité</h2>
-        <p>
+        
+        <p class="secondp">
             Nous mettons à botre disposition un service personnalisé avec un seul interlocuteur durant tout votre
             projet.<br>
             Vous serez séduit par notre expertise, nos compétences et notre sérieux.
         </p>
 
         <h2>Devis gratuit</h2>
-        <p>
+
+        <p class="thridp">
             Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d'intervention. Vous
             souhaitez
             un devis ? Nous vous le réalisons gratuitement.</p>
