--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
 <body>
       
-
+    <script src="javascript1.js"></script>
 
     <img src="assets/img/images/jarditou_logo.jpg" alt="image jardinier" title="jardinier">
 
@@ -73,7 +73,7 @@
             <li><a href="Plan du site.html">Plan du site</a></li>
         </ul>
     </footer>
-
+<script src="assets/js/javascript.js"></script> 
 </body>
 
 </html>
