--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Acceuil</a></li>
+            <li><a href="index.html">Acceuil!</a></li>
             <li><a href="tableau.html">Tableau</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
